<resources>
    <string name="app_name">Calarity</string>
    <string name="welcome">Selamat Datang</string>
    <string name="ket">Explorasi desain sesuai kebutuhanmu</string>
    <string name="email">Masukkan Email</string>
    <string name="pass">Masukkan Password</string>
    <string name="katalog_desain">KATALOG DESAIN</string>
    <string name="keranjang">keranjang</string>
    <string name="logoTv">LOGO</string>
    <string name="feedTv">FEED</string>
    <string name="posterTv">POSTER</string>
    <string name="keranjangTv">KERANJANG</string>
    <string name="fab_content_desc">BELI</string>
    <string name="extended_fab_label">Beli</string>
    <string name="extended_fab_content_desc">BELI</string>
    <string name="transaksi">TRANSAKSI</string>
    <string name="checkout">Checkout</string>
    <string name="copyright">Aplikasi Calarity adalah aplikasi berbasis android yang dibuat menggunakan bahasa kotlin. Calarity adalah sebuah aplikasi marketplace yang memudahkan pengguna untuk menjual dan membeli desain logo, desain feed, dan desain poster secara online. Aplikasi ini dirancang dengan antarmuka yang sederhana dan mudah digunakan, sehingga pengguna dapat dengan cepat menemukan desain yang tepat untuk kebutuhan pengguna.\n\nAplikasi ini dibuat untuk Tugas Besar Proyek Tingkat 2.         \n\nCopyright © 2023 Calarity.\nAll rights reserved.\nMade with Love❤️</string>
    <string name="aboutUs">Calarity adalah gabungan dari dua kata dalam bahasa Sanskerta yaitu \"Kala\" yang berarti seni dan \"Sanskriti\" yang berarti keindahan.\n\nCalarity, seni dan keindahan digabungkan menjadi sebuah konsep yang menggambarkan nilai-nilai estetika dan keindahan dalam desain. Sehingga, Calarity menjadi tempat yang ideal bagi para desainer untuk menampilkan karya seni mereka dan bagi pengguna untuk menemukan desain-desain yang indah dan bermakna untuk kebutuhan bisnis mereka.\n\nCalarity dibuat oleh 4 orang, yaitu :\n• Falah Dwi Handoyo\n• Imam Sasmita Purna Sakti\n• Kadek David Kurniawan\n• Luqman Hakim</string>
</resources>