<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.user.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="83dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="51dp"
            android:background="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:text="@string/ket"
            android:textSize="20sp" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        app:hintTextColor="@color/biru_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:hint="@string/pass"
        app:hintTextColor="@color/biru_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/button"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/biru_700"
        android:text="Masuk"
        app:cornerRadius="6dp" />

    <RelativeLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/daftarSekarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="Belum punya akun? Daftar Sekarang!" />
    </RelativeLayout>

</LinearLayout>