<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.RegisterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="83dp"
            android:layout_height="100dp"
            android:background="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="51dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ket"
            android:layout_marginHorizontal="8dp"
            android:textSize="20sp"/>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmailLayout"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:hintTextColor="@color/pink"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPasswordLayout"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:text="Lupa Kata Sandi?"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/pink"
        android:text="Masuk"
        app:cornerRadius="6dp" />

    <RelativeLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/daftarSekarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="Belum punya akun? Daftar Sekarang!"/>
    </RelativeLayout>

</LinearLayout>