<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    tools:context=".ui.keranjang.KeranjangFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/keranjangtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.25"
            android:text="@string/keranjangTv"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/judul">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_item_keranjang">

        </androidx.recyclerview.widget.RecyclerView>


        <androidx.coordinatorlayout.widget.CoordinatorLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/extended_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                android:contentDescription="@string/extended_fab_content_desc"
                android:text="@string/extended_fab_label"
                android:textColor="@color/white"
                app:backgroundTint="@color/biru_700"
                app:icon="@drawable/baseline_shopping_cart_24"
                app:iconTint="@color/white" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>