<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/biru_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvKatalog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:letterSpacing="0.25"
                    android:text="@string/katalog_desain"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/ibKeranjang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/baseline_shopping_cart_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvKatalog" />

                <LinearLayout
                    android:id="@+id/logo_logo"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/tvKatalog">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/linearLayoutCompat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/linearLayoutCompat2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/btnLogo"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:layout_gravity="center"
                                android:background="@drawable/logo_button"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.444" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="4dp"
                                android:letterSpacing="0.25"
                                android:text="@string/logoTv"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/linearLayoutCompat2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/btnFeed"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:layout_gravity="center"
                                android:background="@drawable/feed_button"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.501"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="4dp"
                                android:letterSpacing="0.25"
                                android:text="@string/feedTv"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/linearLayoutCompat3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/linearLayoutCompat2"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/btnPoster"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:layout_gravity="center"
                                android:background="@drawable/poster_button"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="1.0"
                                app:layout_constraintStart_toEndOf="@+id/imageView3"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="4dp"
                                android:letterSpacing="0.25"
                                android:text="@string/posterTv"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintBottomAppBar"
            app:layout_constraintTop_toBottomOf="@id/cardViewTop">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/list_item_gambar">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/constraintBottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:fabCradleMargin="10dp"
                app:fabCradleRoundedCornerRadius="10dp"
                app:fabCradleVerticalOffset="10dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/floatingActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/transparent_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:menu="@menu/menu_bottom">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/floating"
                        android:layout_width="102dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/keranjang"
                        android:src="@drawable/baseline_shopping_cart_24"
                        app:backgroundTint="@color/biru_700"
                        app:tint="#FFFFFF" />


                </com.google.android.material.bottomnavigation.BottomNavigationView>

            </com.google.android.material.bottomappbar.BottomAppBar>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:id="@+id/sheet"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:visibility="invisible"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:background="@drawable/dialog_bg">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/keranjangtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.25"
                android:textColor="@color/white"
                android:text="@string/keranjangTv"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/baseline_close_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/judul">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_keranjang">

            </androidx.recyclerview.widget.RecyclerView>


            <androidx.coordinatorlayout.widget.CoordinatorLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/extended_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/extended_fab_content_desc"
                    android:text="@string/extended_fab_label"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/biru_700"
                    app:icon="@drawable/baseline_shopping_cart_24"
                    app:iconTint="@color/white" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>